--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <!--Paste your html code here-->
+<html>
+<head>
+<title>My First Web Page</title>
+</head>
+<body>
+<h1>My First Web Page</h1>
+</body>
+</html>
